fix: resolve SonarCloud easy issues (147 to ~100 violations)