@@ -22,7 +22,7 @@ import java.util.ResourceBundle;
 public class LocalizationService {
 
     private static final String BUNDLE_BASE_NAME = "i18n/MessagesBundle";
-    private static Locale currentLocale = new Locale("en", "US");
+    private static Locale currentLocale = Locale.of("en", "US");
 
     /**
      * Returns the currently active locale.
@@ -69,10 +69,10 @@ public class LocalizationService {
         }
 
         switch (languageCode.toLowerCase(java.util.Locale.ROOT)) {
-            case "fi" -> setLocale(new Locale("fi", "FI"));
-            case "en" -> setLocale(new Locale("en", "US"));
-            case "ar" -> setLocale(new Locale("ar", "IQ"));
-            case "ru" -> setLocale(new Locale("ru", "RU"));
+            case "fi" -> setLocale(Locale.of("fi", "FI"));
+            case "en" -> setLocale(Locale.of("en", "US"));
+            case "ar" -> setLocale(Locale.of("ar", "IQ"));
+            case "ru" -> setLocale(Locale.of("ru", "RU"));
             default -> throw new IllegalArgumentException("Unsupported language code: " + languageCode);
         }
     }
